Fix CPGG title spacing
Adjust the distance between the header and the "O CPGG" title to 55 pixels.

--- a/src/pages/CPGG/CPGG.module.css
+++ b/src/pages/CPGG/CPGG.module.css
@@ -27,7 +27,7 @@
   white-space: nowrap;
   font-weight: bold;
   position: absolute !important;
-  top: calc(185px - 28px) !important;
+  top: calc(183px - 28px) !important;
 }
 
 .box {
